# MusicBot

./: .env.example  pyproject.toml
.github/workflows/: ci.yml
src/music_bot/: __main__.py
src/music_bot/adapters/outbound/discord_player/: __init__.py  player.py
src/music_bot/application/mappers/music/: __init__.py  enqueue.py  play_url.py  track.py
src/music_bot/application/orchestration/music/: __init__.py  events.py  guild_actor.py  manager.py  playback_service.py  states.py
src/music_bot/application/ports/: __init__.py  music_player.py
src/music_bot/application/ports/repositories/: __init__.py
src/music_bot/application/use_cases/music/: __init__.py  dequeue.py  enqueue.py  now_playing.py  play_url.py  skip.py  stop.py
src/music_bot/bootstrap/di/: __init__.py  wire.py
src/music_bot/bootstrap/discord/: __init__.py  build.py  run.py
src/music_bot/bootstrap/logging/: __init__.py  log_config.py
src/music_bot/bootstrap/settings/: __init__.py  load.py  models.py  types.py
src/music_bot/bootstrap/settings/errors/: __init__.py  base.py
src/music_bot/domain/music/models/: __init__.py  queue.py  track.py
tests/: conftest.py  typing_helper.py
tests/unit/application/mappers/music/: test_enqueue_mapper.py  test_play_url_mapper.py  test_track_mapper.py
tests/unit/application/orchestration/music/: test_actor_manager.py  test_guild_actor.py  test_playback_service.py
tests/unit/application/use_cases/music/: test_dequeue.py  test_enqueue.py  test_now_playing_use_case.py  test_play_url_use_case.py  test_skip_use_case.py  (+1 more)
tests/unit/domain/music/: test_queue.py
(+46 files in other folders)
